Added discord management that was missing (#27)
